--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tomokiyao/Typescript-practice#readme",
   "devDependencies": {
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   }
 }
