--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
